# ovos-shell

./: CMakeLists.txt  README.md  dev_setup.sh
application/: CMakeLists.txt  main.cpp  qml.qrc  speechintent.cpp
application/qml/: DebugTerm.qml  FactoryResetUI.qml  KdeConnect.qml  Keyboard.qml  ListenerAnimation.qml  MycroftShell.qml  NotificationPopControlled.qml  NotificationPopSticky.qml  NotificationPopTransient.qml  NotificationsSystem.qml  OAuthLoader.qml  OAuthQrCodeLoader.qml  Output.qml  PairingArea.qml  Rounder.qml  ServiceWatcher.qml  ShutdownOptions.qml  SplashScreen.qml  StatusIndicator.qml  SurfaceComponent.qml  TermLoader.qml  main.qml
application/qml/osd/: SliderControl.qml  VolumeOSD.qml
application/qml/panel/: SlidingPanel.qml  test.qml
application/qml/panel/quicksettings/: AdditionalSettingsDelegate.qml  BrightnessSlider.qml  Delegate.qml  HomeDelegate.qml  MuteDelegate.qml  QuickSettings.qml  RebootDelegate.qml  RotationDelegate.qml  ShutdownDelegate.qml  SliderBase.qml  VolumeSlider.qml  WirelessDelegate.qml
compositor/: CMakeLists.txt  ai.mycroft.embedded-compositor.desktop  main.cpp  qml.qrc
compositor/qml/: Output.qml  main.qml
lib/: CMakeLists.txt  placesmodel.cpp  placesmodel.h
theme/: CMakeLists.txt  Theme.qml  kirigamiplasmafactory.cpp  kirigamiplasmafactory.h  ovosthemeunits.cpp  ovosthemeunits.h
